--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thug hell bullets</title>
+    <title>Thug HECK bullet</title>
     <style>
         canvas {
-            background: #001f3f; /* Black bluish color */
+            background: #001f3f; 
             display: block;
             margin: auto;
             border: 1px solid #000;
@@ -44,7 +44,7 @@
     <div id="timer">Time: 0s</div>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
     <div id="menu">
-        <h1>heck bullet</h1>
+        <h1>thug HECK bullet</h1>
         <button id="startButton">Start Game</button>
         <button id="exitButton">Exit</button>
     </div>
